# alexandria

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MAINTAINING.md  MANIFEST.in  Makefile  PYTHON_API.md  README.md  compose.override.yaml  compose.yaml  docker-compose.override.yml  docker-compose.yml  initial_data.json  manage.py  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements-prod.txt  setup.cfg  setup.py  uwsgi.ini
.github/: dependabot.yml
.github/workflows/: ghcr.yml  pypi.yml  tests.yml
alexandria/: alexandria_metadata.py  celery.py  conftest.py  dav.py  dav_provider.py  settings.py  urls.py  wsgi.py
alexandria/core/: api.py  apps.py  factories.py  filters.py  models.py  permissions.py  presign_urls.py  serializers.py  storage_clients.py  tasks.py  thumbs.py  tika.py  urls.py  utils.py  validation.py  validations.py  views.py  visibilities.py
alexandria/core/locale/de/LC_MESSAGES/: django.mo  django.po
alexandria/core/locale/en/LC_MESSAGES/: django.po
alexandria/core/locale/it/LC_MESSAGES/: django.mo  django.po
alexandria/core/management/commands/: encrypt_files.py  fix_alexandria_document_modified_at.py  fix_copied_file_references.py  generate_content_vectors.py  generate_missing_checksums.py  generate_missing_thumbnails.py  migrate_document_title_and_description.py  search.py  set_mime_type_and_size.py
alexandria/core/migrations/: 0001_initial.py  0002_tags_monolingual.py  0003_add_model_tag_synonym_group.py  0003_file_upload_status.py  0004_tag_synonym_group.py  0005_rename_type_and_meta.py  0006_auto_20230504_1142.py  0006_rename_metainfo_jsonfield_verbose_name.py  0007_auto_20230505_1410.py  0007_category_parent.py  0008_document_date.py  0009_file_checksum.py  0010_mark.py  0011_file_content.py  0011_tag_uuid.py  0012_tag_uuid_schema.py  0013_file_content.py  0014_file_mime_type_size.py  0015_fix_modified_by_description.py  0016_category_allowed_mime_types.py  0017_category_sort.py  0017_file_vector.py  0018_alter_document_description_alter_document_title.py  0019_file_content_text.py  0020_category_sort.py  0021_field_names.py  0022_alter_mark_name.py
alexandria/core/tests/: file_data.py  test_api.py  test_commands.py  test_dav.py  test_example_data.py  test_filters.py  test_migration.py  test_migrations.py  test_models.py  test_permissions.py  test_search.py  test_slugmodels.py  test_tasks.py  test_tika.py  test_utils.py  test_validation.py  test_validations.py  test_views.py  test_viewsets.py  test_visibility.py
alexandria/core/tests/__snapshots__/: test_api.ambr  test_dav.ambr  test_filters.ambr  test_tika.ambr  test_viewsets.ambr
alexandria/core/tests/cassettes/test_tika/: test_tika[pdf-test-de.pdf].yaml  test_tika[pdf-test-en.pdf].yaml
alexandria/core/tests/snapshots/: snap_test_api.py  snap_test_filters.py
alexandria/locale/de/LC_MESSAGES/: django.mo  django.po
alexandria/locale/en/LC_MESSAGES/: django.po
alexandria/locale/it/LC_MESSAGES/: django.mo  django.po
alexandria/oidc_auth/: authentication.py  models.py
alexandria/oidc_auth/tests/: test_authentication.py
alexandria/settings/: __init__.py  alexandria.py  django.py
alexandria/storages/: fields.py
alexandria/storages/backends/: s3.py
alexandria/storages/tests/: test_dynamic_field.py
celery/: entrypoint.sh
deploy/: ct.yaml
deploy/charts/alexandria/: Chart.yaml  values.yaml
deploy/charts/alexandria/ci/: default-values.yaml
deploy/charts/alexandria/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: original_alexandria_rfc.md  validation.md
