[tool.poetry]
name = "caluma-alexandria"
version = "6.4.1"
description = "Document management service"
repository = "https://github.com/projectcaluma/alexandria"
authors = ["Caluma <info@caluma.io>"]
license = "GPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.10",
]
include = ["CHANGELOG.md"]
exclude = ["alexandria/conftest.py", "alexandria/**/tests"]
packages = [{ include = "alexandria" }]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
boto3 = "^1.34.157"
clamdpy = "^0.1.0.post1"
django = "~4.2.15"
django-environ = ">=0.9.0,<0.12.0"
django-filter = ">=22.1,<25.0"
django-generic-api-permissions = "^0.4.6"
# beta version for better dependency version ranges https://github.com/SectorLabs/django-localized-fields/issues/95
django-localized-fields = "^6.8b5"
django-storages = { extras = ['s3'], version = "^1.14.2" }
djangorestframework = "^3.13.0"
djangorestframework-jsonapi = ">=5.0.0,<8.0.0"
manabi = "^1.4.0"
mozilla-django-oidc = ">=2,<5"
preview-generator = "^0.29"
psutil = ">=5.9.8,<7.0.0"
psycopg = "^3.2.1"
python-magic = "^0.4.27"
requests = "^2.31.0"
tika = "^2.6.0"
tqdm = "^4.66.5"
gunicorn = "^23.0.0"
# only needed in migrate_document_title_and_description.py, can be dropped in the future
pghstore = "^2.0.2"
celery = "^5.4.0"
redis = "^5.0.8"

[tool.poetry.group.dev.dependencies]
django-extensions = "3.2.3"
django-test-migrations = "1.4.0"
factory-boy = "3.3.1"
gitlint = "0.19.1"
moto = { extras = ["s3"], version = "5.0.16" }
pdbpp = "0.10.3"
pillow = "10.4.0"
pre-commit = "4.0.1"
pytest = "8.3.3"
pytest-celery = "1.1.3"
pytest-cov = "5.0.0"
pytest-django = "4.9.0"
pytest-env = "1.1.5"
pytest-factoryboy = "2.7.0"
pytest-freezer = "0.4.8"
pytest-mock = "3.14.0"
pytest-randomly = "3.15.0"
python-semantic-release = "7.33.3"
requests-mock = "1.12.1"
ruff = "0.7.0"
syrupy = "4.7.2"
watchdog = "5.0.3"
webtest = "3.0.1"
werkzeug = "3.0.4"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["ebau_gwr"]

[tool.pytest.ini_options]
addopts = "--reuse-db --randomly-seed=1521188766"
DJANGO_SETTINGS_MODULE = "alexandria.settings.django"
django_debug_mode = true
filterwarnings = [
    "ignore:Cache could not write path:pytest.PytestCacheWarning",
    "error::PendingDeprecationWarning",
]
env = [
    "ADMINS=Test Example <test@example.com>,Test2 <test2@example.com>",
    "LANGUAGES=en,de,fr",
    "OIDC_OP_USER_ENDPOINT=mock://alexandria.github.com/openid/userinfo",
    "OIDC_OP_INTROSPECT_ENDPOINT=mock://alexandria.github.com/openid/introspect",
    "OIDC_BEARER_TOKEN_REVALIDATION_TIME=60",
    "MOTO_S3_CUSTOM_ENDPOINTS=http://minio:9000",
]

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"

[tool.coverage.run]
source = ["."]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "pragma: todo cover",
    "def __str__",
    "def __unicode__",
    "def __repr__",
]
omit = [
    "*/migrations/*",
    "*/apps.py",
    "manage.py",
    "alexandria/wsgi.py",
    "generate_missing_thumbnails.py",
]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
